# Radi

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
include/: Object.h  Radi.h  Scene.h  Transform.h
include/custom/: Camera.hpp  Light.hpp  Material.hpp  Object.hpp  PBRMaterial.hpp  Primative.hpp  Radi.hpp  RasterScene.hpp  RayMarchScene.hpp  Scene.hpp  Shader.hpp  Shape.hpp  Shape3D.hpp  Transform.hpp  Window.hpp
include/glad/: glad.h
src/: Camera.cpp  Light.cpp  Object.cpp  Primative.cpp  Radi.cpp  RasterScene.cpp  RayMarchScene.cpp  Scene.cpp  Scene.json  Scene2.json  Shader.cpp  Transform.cpp  Window.cpp  glad.c  raytrace.frag  raytrace.vert  shader.frag  shader.vert
src/Scenes/: BRDFScene.json  RasterScene.json  Scene.json  Scene2.json  Scene3.json  Scene4.json
src/Shaders/: BRDF.frag  raymarch.frag  raymarch2.frag  raytrace.frag  shader.frag
